--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.31.0",
+    "eslint-plugin-vue-pug": "^0.6.2",
     "husky": "^9.1.6",
     "prettier": "^2.4.1",
     "pug": "^3.0.3",
